[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/weapons/ShortSword.gd" type="Script" id=1]
[ext_resource path="res://assets/spritesheets/short_sword_spritesheet.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 51, 45 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 51, 0, 51, 45 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 102, 0, 51, 45 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 153, 0, 51, 45 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 15.4663, 6.78672 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 17.3584, 5.46785 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 22.8242, 10 )

[node name="ShortSword" type="Area2D"]
position = Vector2( 0, -9 )
monitorable = false
collision_mask = 5
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 10
frames = SubResource( 5 )

[node name="HitBoxTop" type="CollisionShape2D" parent="."]
position = Vector2( 8.31672, -14.8101 )
shape = SubResource( 6 )

[node name="HitBoxMiddle" type="CollisionShape2D" parent="."]
position = Vector2( 1.04627, -2.51786 )
shape = SubResource( 7 )

[node name="HitBoxBottom" type="CollisionShape2D" parent="."]
position = Vector2( -4.71719, 12.9395 )
shape = SubResource( 8 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
